@@ -554,13 +554,7 @@ static void createParagraphContentsFromString(DOM::DocumentImpl *document, Eleme
         // there is a tab after every entry, except the last entry
         // (if the last character is a tab, the list gets an extra empty entry)
         if (!tabList.isEmpty()) {
-//#ifdef COALESCE_TAB_SPANS
-#if 1
             tabText += '\t';
-#else
-            paragraph->appendChild(createTabSpanElement(document), exceptionCode);
-            ASSERT(exceptionCode == 0);
-#endif
         } else if (tabText != "") {
             paragraph->appendChild(createTabSpanElement(document, &tabText), exceptionCode);
             ASSERT(exceptionCode == 0);
